project/force-app/main/default/objects/Legal_Record__c/Legal_Record__c.object-meta.xml
<CustomObject>
    <label>Legal Record</label>
    <pluralLabel>Legal Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Legal Record Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>