project/force-app/main/default/objects/Legal_Record__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Contracts</relationshipName>
</CustomField>