project/force-app/main/default/objects/Legal_Record__c/fields/Legal_Record_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Record_Due_Date__c</fullName>
    <label>Legal Record Due Date</label>
    <type>Date</type>
</CustomField>