project/force-app/main/default/objects/Legal_Record__c/fields/Legal_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Record_Status__c</fullName>
    <label>Legal Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>