project/force-app/main/default/objects/Legal_Record__c/fields/Legal_Type_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type_Level_1__c</fullName>
    <label>Legal Type Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>