project/force-app/main/default/objects/Legal_Record__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <type>Text</type>
    <length>255</length>
</CustomField>