project/force-app/main/default/objects/Legal_Record__c/fields/RO_Handover__c.field-meta.xml
<CustomField>
    <fullName>RO_Handover__c</fullName>
    <label>RO Handover</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>RO_Handover__c</referenceTo>
    <relationshipName>RO_Handovers</relationshipName>
</CustomField>