project/force-app/main/default/objects/Legal_Record__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>